--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   shared_preferences: ^2.0.6
   http: ^0.13.3
   connectivity: ^3.0.4
-  #stripe_payment: ^1.3.0
+  flutter_secure_storage: ^4.2.1
   
 dev_dependencies:
   flutter_test:
