--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.3
   connectivity: ^3.0.4
   flutter_secure_storage: ^4.2.1
+  flutter_slidable: ^0.6.0
   
 dev_dependencies:
   flutter_test:
